<resources>
    <string name="app_name">TemplateAndroid</string>
    <string name="app_title">SCHOOL Pre-Screen</string>
    <string name="terms_error">* Please accept the Terms and Conditions to continue.</string>
    <string name="terms_and_conditions">End User Licensing Agreement (EULA) License Grant. Blue Devil Apps, LLC grants You a revocable, non-exclusive, non-transferable, limited right to install and use the Application on a single Mobile Device owned and controlled by You, and to access and use the Application on such Mobile Device strictly in accordance with the terms and conditions of this License, the Usage Rules and any service agreement associated with your Mobile Device (collectively “Related Agreements”). Restrictions on Use. You shall use the Application strictly in accordance with the terms of the Related Agreements and shall not: (a) decompile, reverse engineer, disassemble, attempt to derive the source of code of, or decrypt the Application; (b) make any modification, adaptation, improvement enhancement, translation or derivative work from the Application; (c) violate any applicable laws, rules or regulations in connection with Your access or use of the Application; (d) remove, alter or obscure any proprietary notice (including any notice of copyright and trademark) of Blue Devil Apps, LLC or its affiliates, partners, suppliers or the licensors of the Application; (e) use the Application for any reverse generating endeavor, commercial enterprise, or the purpose for which it is not designed or intended; (f) install, use or permit the Application to exist on more than one Mobile Device at a time or on any mobile device or computer; (g) distribute the application to multiple mobile devices; (h) make the Application available over a network or other environment permitting access or use by multiple Mobile Devices or users at the same time; (i) use the Application for creating a product, service or software that is, directly or indirectly, competitive with any or in any way substitute for any services, product or software offered by Blue Devil Apps, LLC; (j) use the Application to send automated queries to any website or to send any unsolicited commercial e-mail; or (k) use any proprietary information or interfaces of Blue Devil Apps, LLC or other intellectual property of Blue Devil Apps, LLC in the design, development, manufacture, licensing or distribution of any applications, accessories or devices for use with the Application. Infringement Acknowledgement. You and Blue Devil Apps, LLC acknowledge and agree that, in the event of a third party claim that the Application or Your possession or use of the Application infringes any third party’s intellectual property rights, You (and not Blue Devil Apps, LLC) will be responsible for the investigation defense, settlement and discharge of any such claim of intellectual property infringement.  You will, however, promptly notify Blue Devil Apps, LLC in writing of such a claim. Termination.  Blue Devil Apps, LLC may, in its sole and absolute discretion, at any time and for any reason, suspend or terminate this License and the rights afforded to You hereunder with or without prior notice.  Furthermore, if You fail to comply with any terms and conditions of the License, then this License and any right afforded to You hereunder shall terminate automatically, without any notice or other action by Blue Devil Apps, LLC. Upon the termination of this License, You shall cease all use of the Application and uninstall the Application. Disclaimer of Warranties. You acknowledge and agree that the Application is provided on an “As Is” and “As Available” basis, and that your use of or reliance upon the Application and any third party content and services accessed thereby is at your sole risk and discretion.  Blue Devil Apps, LLC and its affiliates, partners, suppliers and licensors hereby disclaim any and all representations, warranties and guaranties regarding the Application and third party content and services, whether express, implied or statutory, and including without limitation, the implied warranties of merchantability, fitness for a particular purpose, and non-infringement.  Furthermore, Blue Devil Apps, LLC and its affiliates, partners, suppliers and licensors make on warranty that (I) The Application or third party content and services will meet your requirements; (II) The Application or third party content and services will be interrupted, accurate, reliable, timely secure or error-free; (III) The quality of any products, services, information or other material accessed or obtained by you through the Application will be as represented or meet your expectations; or (IV) Any errors in the application or third party content and services will be corrected.  No advice or information, whether oral or written, obtained by you from Blue Devil Apps, LLC or from the Application shall create any Limitation of Liability. Under no circumstances shall Blue Devil Apps, LLC or its affiliates, partners, suppliers, or licensors be liable for any indirect, incidental, consequential, special or exemplary damages arising out of or in connection with your access or use of or inability to access or use the Application and any third party content and services, whether or not the damages were foreseeable and whether or not Blue Devil Apps, LLC was advised of the possibility of such damages.  Without limiting the generality of the foregoing, Blue Devil Apps, LLC aggregate liability to you (whether under contract, tort, statute or otherwise) shall not exceed the amount of fifty dollars ($50.00).  The foregoing limitations will apply even if the above stated remedy fails of its essential purpose.</string>
    <string name="email_prompt">SCHOOL Email:</string>
    <string name="email_hint">ex. jappleseed123@SCHOOL.org</string>
    <string name="prescreen_error">* Please answer all questions.</string>
    <string name="question_1_prompt">1. Do you have a fever?</string>
    <string name="question_2_prompt">2. Do you have a cough?</string>
    <string name="question_3_prompt">3. Do you have shortness of breath?</string>
    <string name="question_4_prompt">4. Have you recently come into contact with someone who has had the virus?</string>
    <string name="phone_number">925-288-8222</string>
    <string name="email">covidsupport@dlshs.org</string>
    <string name="campus_location">Athletic Training Room</string>
    <string name="symptoms_link">
        <a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fabout%2Fsymptoms.html">Symptoms</a>
    </string>
</resources>