<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prescreenTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/viewMyInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="View My Info"
                android:textColor="#03A9F4"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prescreenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="Pre-Screen"
                android:textAlignment="center"
                android:textColor="#03A9F4"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prescreenErrorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/prescreen_error"
                android:textAlignment="textStart"
                android:textColor="#FF0000"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.219"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/question1Prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/question_1_prompt"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prescreenErrorLabel" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question1Prompt">

                <RadioButton
                    android:id="@+id/q1Yes"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#000000"
                    android:text="Yes"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/q1No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#000000"
                    android:text="No"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/temperatureInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="Temperature (°F), if taken"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/question2Prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/question_2_prompt"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperatureInput" />

            <RadioGroup
                android:id="@+id/RadioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question2Prompt">

                <RadioButton
                    android:id="@+id/q2Yes"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:text="Yes"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/q2No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#000000"
                    android:text="No"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/question3Prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/question_3_prompt"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RadioGroup2" />

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question3Prompt">

                <RadioButton
                    android:id="@+id/q3Yes"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:text="Yes"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/q3No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#000000"
                    android:text="No"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/question4Prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/question_4_prompt"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question4Prompt">

                <RadioButton
                    android:id="@+id/q4Yes"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:text="Yes"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/q4No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:text="No"
                    android:textAlignment="textStart"
                    android:textSize="24sp" />

            </RadioGroup>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:text="Submit"
                android:textAlignment="center"
                android:textColor="#03A9F4"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.472"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/symptomsLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/symptoms_link"
                android:textColor="#03A9F4"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>